2021-01-14  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix wrong TRIE_CHAR_TERM semantics.

	* datrie/trie.h (trie_state_is_terminal):
	  - Test for terminal state using zero AlphaChar.
	    TRIE_CHAR_TERM is a TrieChar, although it's also accidentally zero.

2021-01-14  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Reduce loops in alpha_map_recalc_work_area().

	* datrie/alpha-map.c (alpha_map_recalc_work_area):
	  - Instead of pre-filling trie-to-alpha map with errors
	    and setting valid cells afterward, just fill error cells
	    left after valid cells are done. Then, finally set
	    TRIE_CHAR_TERM cell.

2021-01-10  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Rewrite AlphaMap recalc.

	* datrie/alpha-map.c (alpha_map_recalc_work_area):
	  Rewrite alpha-to-trie & trie-to-alpha maps recalculation
	  - For clearer relation between the two maps
	  - To allow other TRIE_CHAR_TERM values than zero

2021-01-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use TRIE_CHAR_TERM macro instead of zero.

	* datrie/alpha-map.c
	  (alpha_map_char_to_trie, alpha_map_char_to_trie_str):
	* datrie/trie.c (trie_branch_in_branch, trie_branch_in_tail):
	* datrie/tail.c (tail_walk_str, tail_walk_char):
	  - Use TRIE_CHAR_TERM instead of hard-wired zero when working
	    with raw trie string termination.
	* datrie/trie-string.c (trie_string_terminate):
	  - Append TRIE_CHAR_TERM instead of simply delegating to
	    dstring_terminate().

2021-01-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Share static trie string functions internally.

	* datrie/trie-string.h, datrie/trie-string.c, datrie/tail.c
	  (tc_strlen -> trie_char_strlen, tc_strdup -> trie_char_strdup):
	  - Move private functions in tail.c to trie-string.[ch],
	    with new full names under new "static trie string" section.
	  - Check/assign string terminator using TRIE_CHAR_TERM
	    instead of zero.
	* datrie/tail.c (tail_set_suffix):