@@ -1037,8 +1037,7 @@ trie_iterator_get_key (const TrieIterator *iter)
         tail_str += s->suffix_idx;
 
         alpha_key = (AlphaChar *) malloc (sizeof (AlphaChar)
-                                          * (strlen ((const char *)tail_str)
-                                             + 1));
+                                          * (trie_char_strlen (tail_str) + 1));
         alpha_p = alpha_key;
     } else {
         TrieIndex  tail_idx;
@@ -1054,7 +1053,7 @@ trie_iterator_get_key (const TrieIterator *iter)
         key_p = trie_string_get_val (iter->key);
         alpha_key = (AlphaChar *) malloc (
                         sizeof (AlphaChar)
-                        * (key_len + strlen ((const char *)tail_str) + 1)
+                        * (key_len + trie_char_strlen (tail_str) + 1)
                     );
         alpha_p = alpha_key;
         for (i = key_len; i > 0; i--) {
@@ -1062,7 +1061,7 @@ trie_iterator_get_key (const TrieIterator *iter)
         }
     }
 
-    while (*tail_str) {
+    while (TRIE_CHAR_TERM != *tail_str) {
         *alpha_p++ = alpha_map_trie_to_char (s->trie->alpha_map, *tail_str++);
     }
     *alpha_p = 0;
